# hrml

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PLAN.md  README.md  hrml.md  result  result-2  result-3  result-4  spec.md
cli/: ast_log.rs  build.rs  main.rs  project.rs  server.rs  validation.rs
docs/: missing-features.md  oxml.md  taglib.md
example/: hrml.db  hrml.toml  test_import.py
example/endpoints/api/: blog.py  counter.py  todos.py
example/lib/: __init__.py  hrml.py
example/static/css/: style.css
example/templates/components/: nav.hrml
example/templates/layouts/: base.hrml
example/templates/pages/: about.hrml  blog.hrml  counter.hrml  index.hrml  todos.hrml
example/unsuspicious/: hrml.toml
projects/unsuspicious.org/: hrml.toml
projects/unsuspicious.org/rendered-site/: 404.html  index.html
src/: algebra.rs  auth.rs  backend.rs  config.rs  convert.rs  database.rs  db.rs  generate.rs  html.rs  lib.rs  main.rs  oxml.rs  paths.rs  project.rs  python.rs  router.rs  security.rs  ssg.rs  template.rs
src/assets/: mod.rs
src/assets/components/: nav.hrml
src/assets/css/: style.css
src/assets/layout/: base.hrml
src/assets/pages/: about.hrml  index.hrml
src/features/: data.rs  latex.rs  markdown.rs  mod.rs  tags.rs  text.rs
src/runtime/: client.js  hrml.py
src/template/: ast.rs  error.rs  head.rs  pipeline.rs  predicate.rs  resolve.rs  utility.rs
src/template/parser/: hparser.rs  mod.rs  tparser.rs
tests/: backend_tests.rs  component_loaded_test.rs  config_and_editor_tests.rs  features_tests.rs  fixtures_runner.rs  module_integration_tests.rs  module_more_tests.rs  oxml_tests.rs  taglib_tests.rs  template_tests.rs  var_resolution_tests.rs
usi/: README.md  hrml.toml  xrml.toml
usi/data/posts/: proposition-7.mdx
usi/endpoints/api/: hello.hrml
usi/posts/: completing-regex.mdx  proposition-7.mdx
usi/static/: font-test.html
usi/static/css/: style.css
usi/static/posts/: completing-regex.mdx  proposition-7.mdx
usi/templates/: _imports.hrml
usi/templates/components/: card-grid.hrml  card-link.hrml  card-wrap.hrml  card.hrml  cta.hrml  footer.hrml  hero.hrml  icon.hrml  job-card.hrml  nav.hrml  page-layout.hrml  post-card.hrml  prose-page.hrml  section-header.hrml  section.hrml  stat.hrml  stats.hrml
usi/templates/jobs/: itinerant-polymath.mdx
validation/: advanced_tests.proptest-regressions  advanced_tests.rs  comprehensive_tests.rs  fixtures_runner.rs  formal_properties.rs  harness.rs  trml_equivalence.rs
validation/cases/: chrome.toml  component_basic.toml  components.toml  content.toml  imported_component_layout.toml  interactive.toml  latex.toml  layouts.toml  load_simple.toml  markdown.toml  pages.toml  parser_basic.toml  sections.toml  self_closing_bind.toml  wasm.toml  yaml_frontmatter_markdownfm.toml
validation/prop/: mod.proptest-regressions  mod.rs
validation/units/: component_tests.rs  compose_tests.rs  data_flow_tests.rs  edge_cases_tests.rs  interactive_tests.rs  mod.rs  parser_tests.rs  shared.rs
vscode/: .vscodeignore  README.md  hrml-syntax-0.1.0.vsix  package.json  xrml-syntax-0.1.0.vsix  xrml-syntax-0.2.0.vsix
vscode-hrml/: README.md  hrml-syntax-0.1.0.vsix  language-configuration.json  package.json
vscode-hrml/syntaxes/: hrml.tmLanguage.json
vscode/syntaxes/: hrml-html-injection.tmLanguage.json  hrml.tmLanguage.json  trml.tmLanguage.json
(+167 files in other folders)
