[package]
name = "hrml"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal tokio instead of full
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
# Core web framework
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query", "json"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["fs"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
# Python integration
pyo3 = { version = "0.20", features = ["auto-initialize"] }
# Database
rusqlite = "0.32"
once_cell = "1.21"
# Template processing
regex = "1.10"
toml = "0.8"
