[package]
name = "hrml"
version = "0.1.0"
edition = "2021"
description = "Minimal server-rendered web framework with Rust-native endpoints"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/hrml"
keywords = ["web", "framework", "html", "server", "axum"]
categories = ["web-programming", "command-line-utilities"]

[[bin]]
name = "hrml"
path = "src/main.rs"

[[test]]
name = "comprehensive_tests"
path = "validation/comprehensive_tests.rs"

[[test]]
name = "advanced_tests"
path = "validation/advanced_tests.rs"

[dependencies]
# Minimal tokio instead of full
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
# Core web framework
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query", "json"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["fs"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
toml = "0.8"
pulldown-cmark = "0.12"

[dev-dependencies]
regex = "1"
