[package]
name = "xrml"
version = "0.1.0"
edition = "2021"
description = "eXtensible Rust Markup Language — recursive acronym: HRML (HRML Markup Language) and TRML (TOML-like Markup Language)"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/xrml"
keywords = ["web", "framework", "html", "server", "axum"]
categories = ["web-programming", "command-line-utilities"]
exclude = ["usi/", "dist/", "*.log"]

[[bin]]
name = "xrml"
path = "cli/main.rs"

[[test]]
name = "comprehensive_tests"
path = "validation/comprehensive_tests.rs"

[[test]]
name = "advanced_tests"
path = "validation/advanced_tests.rs"

[[test]]
name = "unit_tests"
path = "validation/unit_tests.rs"

[[test]]
name = "prop_tests"
path = "validation/prop/mod.rs"

[[test]]
name = "trml_equivalence"
path = "validation/trml_equivalence.rs"



[dependencies]
# Minimal tokio instead of full
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
# Core web framework
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query", "json"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["fs"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
toml = "0.8"
pulldown-cmark = "0.12"
libc = "0.2"
notify = "6"

[dev-dependencies]
regex = "1"
proptest = "1"
kuchiki = "0.8"
tempfile = "3"
